# virtual-dev

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
assets/: manifest.json  sw.js
src/: lib.rs  llm_client.rs  ui.rs
