[package]
name = "april"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "april"
path = "src/bin/april.rs"

[[bin]]
name = "lint"
path = "src/bin/lint.rs"


[dependencies]
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
serde_json = "1.0.115"
thiserror = "1.0"
anyhow = "1.0"
ehttp = "0.5.0"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive", "env"] }

minijinja = "1.0.16"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
